test/success/protocol/simple/main.sk
module Main {

struct Foo {

}

struct Foo2 {

}

protocol Bar[T] {
    fn bar(self) -> ()
}

impl Default Bar[Foo] {
    fn bar(self) -> () {
        assert(True)
    }
}

impl Default2 Bar[Foo2] {
    fn bar(self) -> () {
        assert(False)
    }
}

fn main() {
    let f = Foo();
    f.bar(); // Bar[Foo] should be chosen
}

}