test/errors/traits/instance_not_found/main.sk
module Main {

struct Foo {

}

protocol Bar[T] {
    fn bar(self) -> ()
}

fn main() {
    let f = Foo();
    f.bar();
}

}